feat: 웹 사이트 만들기 - html,css 실습

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
+        rel="stylesheet">
     <title>Nav bar</title>
     <script src="https://kit.fontawesome.com/003eb50bc9.js" crossorigin="anonymous">
     </script>
@@ -25,9 +29,9 @@
             <li><a href="">Bookings</a></li>
         </ul>
 
-        <ul class="navbar__links">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
+        <ul class="navbar__icons">
+            <li><i class="fa-brands fa-facebook"></i></li>
+            <li><i class="fa-brands fa-instagram"></i></li>
         </ul>
 
     </nav>
